--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
@@ -2,8 +2,10 @@
 
 <head>
 	<!-- jQuery -->
-	<script type="text/javascript" src="/portal/resources/js/jquery/jquery.js"></script>
-	<script type="text/javascript" src="/portal/resources/js/jquery/jquery-ui.min.js"></script>
+	<script type="text/javascript"
+		src="http://desenvolvimento.castilho.com.br:3232/portal/resources/js/jquery/jquery.js"></script>
+	<script type="text/javascript"
+		src="http://desenvolvimento.castilho.com.br:3232/portal/resources/js/jquery/jquery-ui.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.14.1/jquery-ui.min.js"
 		integrity="sha512-MSOo1aY+3pXCOCdGAYoBZ6YGI0aragoQsg1mKKBHXCYPIWxamwOE7Drh+N5CPgGI5SA9IEKJiPjdfqWFWmZtRA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -14,11 +16,12 @@
 		href="http://fluig.castilho.com.br:1010/style-guide/css/fluig-style-guide.min.css" />
 	<script type="text/javascript" src="http://fluig.castilho.com.br:1010/style-guide/js/fluig-style-guide.min.js"
 		charset="utf-8"></script>
-	<script type="text/javascript" src="/webdesk/vcXMLRPC.js"></script>
+	<script type="text/javascript" src="http://desenvolvimento.castilho.com.br:3232/webdesk/vcXMLRPC.js"></script>
 
 
 	<!-- Mustache -->
-	<script type="text/javascript" src="/portal/resources/js/mustache/mustache-min.js"></script>
+	<script type="text/javascript"
+		src="http://desenvolvimento.castilho.com.br:3232/portal/resources/js/mustache/mustache-min.js"></script>
 
 	<!-- Castilho Dev Guide -->
 	<link rel="stylesheet"
@@ -28,8 +31,10 @@
 	<link rel="stylesheet"
 		href="http://desenvolvimento.castilho.com.br:3232/castilho_dev_guide/resources/css/castilho_dev_guide.css">
 
-	<script src="/castilho_dev_guide/resources/js/castilho-consultas-rm.js"></script>
-	<script src="/castilho_dev_guide/resources/js/castilho-utils.js"></script>
+	<script
+		src="http://desenvolvimento.castilho.com.br:3232/castilho_dev_guide/resources/js/castilho-consultas-rm.js"></script>
+	<script
+		src="http://desenvolvimento.castilho.com.br:3232/castilho_dev_guide/resources/js/castilho-utils.js"></script>
 
 
 	<!-- selectize -->
@@ -85,22 +90,6 @@
 			<main style="padding: 20px; display: none;" id="main">
 				<div class="row" id="divCabecalhoSolicitacao">
 					<div class="col-md-6">
-						<label for="">Motivo de Transferência:</label>
-						<select name="motivoTransferencia" id="motivoTransferencia" class="form-control">
-							<option value=""></option>
-							<option value="Equipamento">Equipamento</option>
-							<option value="Mão de Obra">Mão de Obra</option>
-							<option value="Prestação de Serviço">Prestação de Serviço</option>
-							<option value="Insumos">Insumos</option>
-						</select>
-						<br>
-
-					</div>
-					<div class="col-md-2">
-						<label for="">Data Competência:</label>
-						<input name="dataCompetencia" id="dataCompetencia" class="form-control" />
-						<br>
-
 					</div>
 					<div class="col-md-2">
 						<label for="">Solicitante:</label>
@@ -108,16 +97,16 @@
 						<br>
 					</div>
 					<div class="col-md-2">
+						<label for="">Solicitação:</label>
+						<input name="solicitacao" id="solicitacao" class="form-control" readonly />
+						<br>
+					</div>
+					<div class="col-md-2">
 						<label for="">Data Solicitação:</label>
 						<input name="dataSolicitacao" id="dataSolicitacao" class="form-control" readonly />
 						<br>
 					</div>
-					<div class="col-md-12">
-						<label for="">Motivo da Transferência de Custo</label>
-						<textarea name="textMotivoTransferencia" id="textMotivoTransferencia" class="form-control"
-							rows="4"></textarea>
-						<br>
-					</div>
+
 				</div>
 				<div id="divObrasTransferencia" class="row">
 					<div class="col-md-6">
@@ -136,7 +125,7 @@
 									<div class="col-md-4">
 										<label for="">Valor:</label>
 										<input name="valorObraOrigem" id="valorObraOrigem" class="form-control"
-											style="color: green !important;" readonly />
+											style="color: green !important;" readonly inert />
 									</div>
 								</div>
 								<br>
@@ -144,17 +133,17 @@
 									<div class="col-md-4">
 										<label for="">Engenheiro:</label>
 										<input type="text" name="engenheiroObraOrigem" id="engenheiroObraOrigem"
-											class="form-control" readonly>
+											class="form-control" readonly inert>
 									</div>
 									<div class="col-md-4">
 										<label for="">Coordenador:</label>
 										<input type="text" name="coordenadorObraOrigem" id="coordenadorObraOrigem"
-											class="form-control" readonly>
+											class="form-control" readonly inert>
 									</div>
 									<div class="col-md-4">
 										<label for="">Diretor:</label>
 										<input type="text" name="diretorObraOrigem" id="diretorObraOrigem"
-											class="form-control" readonly>
+											class="form-control" readonly inert>
 									</div>
 								</div>
 							</div>
@@ -176,7 +165,7 @@
 									<div class="col-md-4">
 										<label for="">Valor:</label>
 										<input name="valorObraDestino" id="valorObraDestino" class="form-control"
-											style="color: orangered !important;" readonly />
+											style="color: orangered !important;" readonly inert />
 									</div>
 								</div>
 								<br>
@@ -184,17 +173,17 @@
 									<div class="col-md-4">
 										<label for="">Engenheiro:</label>
 										<input type="text" name="engenheiroObraDestino" id="engenheiroObraDestino"
-											class="form-control" readonly>
+											class="form-control" readonly inert>
 									</div>
 									<div class="col-md-4">
 										<label for="">Coordenador:</label>
 										<input type="text" name="coordenadorObraDestino" id="coordenadorObraDestino"
-											class="form-control" readonly>
+											class="form-control" readonly inert>
 									</div>
 									<div class="col-md-4">
 										<label for="">Diretor:</label>
 										<input type="text" name="diretorObraDestino" id="diretorObraDestino"
-											class="form-control" readonly>
+											class="form-control" readonly inert>
 									</div>
 								</div>
 							</div>
@@ -202,84 +191,117 @@
 					</div>
 					<br>
 				</div>
-				<div id="divItensTransferencia" style="display: none;">
+				<div id="divTransferencias">
 					<div class="panel panel-castilho-primary">
 						<div class="panel-heading">
-							<h3 class="panel-title">ITENS</h3>
+							<h3 class="panel-title">TRANSFERÊNCIAS</h3>
 						</div>
-						<div class="panel-body">
-
-							<table class="table table-bordered table-striped" id="tableItens" tablename="tableItens"
-								noaddbutton="true" nodeletebutton="true">
-								<thead>
+						<div class="panel-body" style="padding: 0;">
+							<table class="table" id="tableTransferencias" tablename="tableTransferencias"
+								noaddbutton="true" nodeletebutton="true" style="margin-bottom: 0px;">
+								<thead style="display: none;">
 									<tr>
-										<th>#</th>
-										<th>Produto</th>
-										<th>Descrição</th>
-										<th>QNTD</th>
-										<th>Valor Unit.</th>
-										<th>Valor Total</th>
-										<th></th>
+										<td></td>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
-										<td style="width: 1%;"></td>
-										<td style="width: 40%;">
-											<select type="text" name="itemProduto" id="itemProduto"
-												autocomplete="off"></select>
-										</td>
-										<td style="width: 20%;">
-											<input type="text" name="itemDescricao" id="itemDescricao"
-												class="form-control">
-										</td>
-										<td style="width: 10%;">
-											<input type="text" name="itemQuantidade" id="itemQuantidade"
-												class="form-control">
-										</td>
-										<td style="width: 10%;">
-											<input type="text" name="itemValorUnit" id="itemValorUnit"
-												class="form-control">
-										</td>
-										<td style="width: 10%;">
-											<input type="text" name="itemValorTotal" id="itemValorTotal"
-												class="form-control" readonly>
-										</td>
-										<td style="text-align: center;">
-											<button class="btn btn-danger btnRemoverLinhaItem">
-												<i class="flaticon flaticon-trash icon-md" aria-hidden="true"></i>
-											</button>
-										</td>
-									</tr>
-								</tbody>
-								<tfoot>
-									<tr>
-										<td colspan="7">
-											<div style="text-align: center;">
-												<button class="btn btn-success" id="btnAdicionarItem">
-													<i class="flaticon flaticon-add-plus icon-md"
-														aria-hidden="true"></i>
-												</button>
+										<td style="padding: 0px; border: solid 1px black;">
+											<div class="panel panel-default panelTransferencia" style="margin-bottom: 0px;">
+												<div class="panel-heading">
+													<h3 class="panel-title">
+														<span>
+															<i class="flaticon flaticon-chevron-down icon-md"
+																aria-hidden="true"></i>
+															<span class="spanTipoTransferencia"></span>
+
+														</span>
+														<span class="spanValorTransferencia">R$ 0,00</span>
+													</h3>
+												</div>
+												<div class="panel-body">
+													<input type="hidden" name="listItensTransferencia"
+														id="listItensTransferencia" class="listItensTransferencia">
+													<div class="row">
+														<div class="col-md-6">
+															<label for="">Motivo de Transferência:</label>
+															<select name="motivoTransferencia" id="motivoTransferencia"
+																class="form-control motivoTransferencia">
+																<option value=""></option>
+																<option value="Equipamento">Equipamento</option>
+																<option value="Mão de Obra">Mão de Obra</option>
+																<option value="Prestação de Serviço">Prestação de
+																	Serviço
+																</option>
+																<option value="Insumos">Insumos</option>
+															</select>
+															<br>
+														</div>
+														<div class="col-md-4">
+															<label for="">Valor Total:</label>
+															<input type="text" name="valorTotalTransferencia"
+																id="valorTotalTransferencia"
+																class="form-control valorTotalTransferencia" readonly>
+															<br>
+														</div>
+													</div>
+													<div class="divTabelaItens">
+													</div>
+													<br>
+													<div class="">
+														<label for="">Justificativa:</label>
+														<textarea name="textMotivoTransferencia"
+															id="textMotivoTransferencia"
+															class="form-control textMotivoTransferencia"
+															rows="4"></textarea>
+														<br>
+													</div>
+												</div>
 											</div>
 										</td>
 									</tr>
-								</tfoot>
+								</tbody>
 							</table>
 						</div>
 					</div>
+
 				</div>
+				<div class="alignCenter">
+					<button class="btn btn-primary" id="btnAdicionarTransferencia">Adicionar Transferência</button>
+				</div>
+
+				<br>
 				<div id="divHistorico" style="display: none;">
-					<div class="panel panel-castilho-primary">
+					<div class="panel panel-castilho-primary panelColapse">
 						<div class="panel-heading">
 							<h3 class="panel-title">
 								HISTÓRICO
 							</h3>
 						</div>
 						<div class="panel-body">
+							<div id="divOpcoesAprovacao" style="display: none;">
+								<div class="row">
+									<div class="col-md-3"></div>
+
+									<div class="col-md-3">
+										<button class="btn btn-success btn-block" id="btnAprovar">Aprovar</button>
+									</div>
+									<div class="col-md-3">
+										<button class="btn btn-danger btn-block" id="btnReprovar">Reprovar</button>
+									</div>
+								</div>
+							</div>
+							<div class="row" id="divObservacaoAprovacao" style="display: none;">
+								<div class="col-md-12">
+									<label for="">Observação:</label>
+									<textarea name="textObservacao" id="textObservacao" class="form-control"
+										rows="4"></textarea>
+								</div>
+							</div>
+							<br>
 							<div id="divLinhasHistorico">
 
 							</div>
-
 							<div style="display: none;">
 								<!-- Table hidden para guardar as movimentacoes da Solicitação -->
 								<table id="tableHistorico" tablename="tableHistorico">
@@ -319,24 +341,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="divOpcoesAprovacao" style="display: none;">
-					<div class="row">
-						<div class="col-md-3"></div>
 
-						<div class="col-md-3">
-							<button class="btn btn-success btn-block" id="btnAprovar">Aprovar</button>
-						</div>
-						<div class="col-md-3">
-							<button class="btn btn-danger btn-block" id="btnReprovar">Reprovar</button>
-						</div>
-					</div>
-				</div>
-				<div class="row" id="divObservacaoAprovacao" style="display: none;">
-					<div class="col-md-12">
-						<label for="">Observação:</label>
-						<textarea name="textObservacao" id="textObservacao" class="form-control" rows="4"></textarea>
-					</div>
-				</div>
 			</main>
 			<footer id="footer" style="display: none;">
 				<div>
