--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
@@ -63,8 +63,10 @@
 				<input type="hidden" name="dateSolicitacao" id="dateSolicitacao">
 				<input type="hidden" name="CODCOLIGADA" id="CODCOLIGADA">
 				<input type="hidden" name="ID_TRANSFERENCIAS_DE_CUSTO" id="ID_TRANSFERENCIAS_DE_CUSTO">
+
 				<input type="hidden" name="TRANSFERE_CUSTO" id="TRANSFERE_CUSTO">
 				<input type="hidden" name="TRANSFERE_RECEITA" id="TRANSFERE_RECEITA">
+
 				<input type="hidden" name="IDMOV_ORIGEM" id="IDMOV_ORIGEM">
 				<input type="hidden" name="IDMOV_DESTINO" id="IDMOV_DESTINO">
 				<input type="hidden" name="valorTotal" id="valorTotal">
@@ -119,7 +121,8 @@
 							<div class="panel-heading">
 								<h3 class="panel-title" style="display: flex;justify-content: space-between;">
 									<div>
-										OBRA ORIGEM <span style="color: lightgreen;">(Diminuição de Custo)</span>
+										OBRA ORIGEM 
+										<i class="flaticon flaticon-trending-up icon-md iconStonks" id="iconObraOrigem" aria-hidden="true"></i>
 									</div>
 									<div id="spanIDMOV_ORIGEM"></div>
 								</h3>
@@ -163,7 +166,8 @@
 							<div class="panel-heading">
 								<h3 class="panel-title" style="display: flex;justify-content: space-between;">
 									<div>
-										OBRA DESTINO <span style="color: orangered !important;">(Aumento de Custo)</span>
+										OBRA DESTINO 
+										<i class="flaticon flaticon-trending-up icon-md iconNotStonks" id="iconObraDestino" aria-hidden="true"></i>
 									</div>
 									<div id="spanIDMOV_DESTINO"></div>
 								</h3>
@@ -178,7 +182,7 @@
 									<div class="col-md-4">
 										<label for="">Valor:</label>
 										<input name="valorObraDestino" id="valorObraDestino" class="form-control"
-											style="color: orangered !important;" readonly inert />
+											style="color: red !important;" readonly inert />
 									</div>
 								</div>
 								<br>
@@ -245,12 +249,16 @@
 															<select name="motivoTransferencia" id="motivoTransferencia"
 																class="form-control motivoTransferencia">
 																<option value=""></option>
-																<option value="Equipamento">Equipamento</option>
-																<option value="Mão de Obra">Mão de Obra</option>
-																<option value="Prestação de Serviço">Prestação de
-																	Serviço
-																</option>
-																<option value="Insumos">Insumos</option>
+																<optgroup label="Transferências de Custo">
+																	<option value="Equipamento">Equipamento</option>
+																	<option value="Mão de Obra">Mão de Obra</option>
+																	<option value="Prestação de Serviço">Prestação de Serviço </option>
+																	<option value="Insumos">Insumos</option>
+																</optgroup>
+																<optgroup label="Transferências de Receita">
+																	<option value="Receita">Receita</option>
+																</optgroup>
+													
 															</select>
 															<br>
 														</div>
