Incluí campos para salvar a aprovação do usuário e remove da Painel de Histórico a opção de minimizar o Painel

--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
@@ -88,6 +88,8 @@
 				<input type="hidden" name="aprovadoObraOrigem" id="aprovadoObraOrigem">
 
 				<input type="hidden" name="decisao" id="decisao">
+				<input type="hidden" name="decisaoAprovadorObraOrigem" id="decisaoAprovadorObraOrigem">
+				<input type="hidden" name="decisaoAprovadorObraDestino" id="decisaoAprovadorObraDestino">
 			</div>
 
 
@@ -297,7 +299,7 @@
 
 				<br>
 				<div id="divHistorico" style="display: none;">
-					<div class="panel panel-castilho-primary panelColapse">
+					<div class="panel panel-castilho-primary">
 						<div class="panel-heading">
 							<h3 class="panel-title">
 								HISTÓRICO
