Correção para limpar o valor do campo decisão e alteração de label do campo Tipo de Transferência

--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
@@ -247,7 +247,7 @@
 														id="listItensTransferencia" class="listItensTransferencia">
 													<div class="row">
 														<div class="col-md-6">
-															<label for="">Motivo de Transferência:</label>
+															<label for="">Tipo de Transferência:</label>
 															<select name="motivoTransferencia" id="motivoTransferencia"
 																class="form-control motivoTransferencia">
 																<option value=""></option>
