--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
@@ -60,6 +60,9 @@
 				<input type="hidden" name="numProces" id="numProces">
 				<input type="hidden" name="atividade" id="atividade">
 				<input type="hidden" name="formMode" id="formMode">
+				<input type="hidden" name="isMobile" id="isMobile">
+
+
 				<input type="hidden" name="dateSolicitacao" id="dateSolicitacao">
 				<input type="hidden" name="CODCOLIGADA" id="CODCOLIGADA">
 				<input type="hidden" name="ID_TRANSFERENCIAS_DE_CUSTO" id="ID_TRANSFERENCIAS_DE_CUSTO">
@@ -211,7 +214,7 @@
 					<br>
 				</div>
 				<div id="divTransferencias">
-					<div class="panel panel-castilho-primary">
+					<div class="panel panel-castilho-primary" id="divPanelTransfenrecias">
 						<div class="panel-heading">
 							<h3 class="panel-title">TRANSFERÊNCIAS</h3>
 						</div>
@@ -291,6 +294,9 @@
 							</table>
 						</div>
 					</div>
+					<div id="divPanelTransfenreciasMobile" style="display: none;">
+
+					</div>
 
 				</div>
 				<div class="alignCenter">
@@ -308,12 +314,12 @@
 						<div class="panel-body">
 							<div id="divOpcoesAprovacao" style="display: none;">
 								<div class="row">
-									<div class="col-md-3"></div>
+									<div class="col-md-3 col-xs-12"></div>
 
-									<div class="col-md-3">
+									<div class="col-md-3 col-xs-6">
 										<button class="btn btn-success btn-block" id="btnAprovar">Aprovar</button>
 									</div>
-									<div class="col-md-3">
+									<div class="col-md-3 col-xs-6">
 										<button class="btn btn-danger btn-block" id="btnReprovar">Reprovar</button>
 									</div>
 								</div>
