feat: Inclui a atividade da Controladoria para quando a transferência é entre empresas

--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
@@ -70,6 +70,12 @@
 				<input type="hidden" name="TRANSFERE_CUSTO" id="TRANSFERE_CUSTO">
 				<input type="hidden" name="TRANSFERE_RECEITA" id="TRANSFERE_RECEITA">
 
+				<input type="hidden" name="CODCOLIGADA_ORIGEM" id="CODCOLIGADA_ORIGEM">
+				<input type="hidden" name="CODCCUSTO_ORIGEM" id="CODCCUSTO_ORIGEM">
+				
+				<input type="hidden" name="CODCOLIGADA_DESTINO" id="CODCOLIGADA_DESTINO">
+				<input type="hidden" name="CODCCUSTO_DESTINO" id="CODCCUSTO_DESTINO">
+
 				<input type="hidden" name="IDMOV_ORIGEM" id="IDMOV_ORIGEM">
 				<input type="hidden" name="IDMOV_DESTINO" id="IDMOV_DESTINO">
 				<input type="hidden" name="valorTotal" id="valorTotal">
