--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
@@ -19,6 +19,12 @@
 	<script type="text/javascript" src="http://desenvolvimento.castilho.com.br:3232/webdesk/vcXMLRPC.js"></script>
 
 
+	<!-- Docxtemplater -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/docxtemplater/3.65.2/docxtemplater.js"></script>
+    <script src="https://unpkg.com/pizzip@3.2.0/dist/pizzip.js"></script>
+    <script src="https://unpkg.com/pizzip@3.2.0/dist/pizzip-utils.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
+
 	<!-- Mustache -->
 	<script type="text/javascript"
 		src="http://desenvolvimento.castilho.com.br:3232/portal/resources/js/mustache/mustache-min.js"></script>
@@ -49,6 +55,7 @@
 	<!-- Formulario -->
 	<link rel="stylesheet" href="style.css">
 	<script src="function.js"></script>
+	<script src="exportResumo.js"></script>
 	<script src="script.js"></script>
 </head>
 
@@ -329,6 +336,10 @@
 				</div>
 				<div class="alignCenter">
 					<button class="btn btn-primary" id="btnAdicionarTransferencia">Adicionar Transferência</button>
+				</div>
+
+				<div id="divDownloadResumo" style="display: none; text-align: center;">
+					<button class="btn btn-success" id="btnDownloadResumo">Download Resumo</button>
 				</div>
 
 				<br>
