--- a/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
+++ b/Transferência de Custo entre Obras/forms/formTransferenciaDeCustoEntreObras/formTransferenciaDeCustoEntreObras.html
@@ -3,9 +3,9 @@
 <head>
 	<!-- jQuery -->
 	<script type="text/javascript"
-		src="http://desenvolvimento.castilho.com.br:3232/portal/resources/js/jquery/jquery.js"></script>
+		src="/portal/resources/js/jquery/jquery.js"></script>
 	<script type="text/javascript"
-		src="http://desenvolvimento.castilho.com.br:3232/portal/resources/js/jquery/jquery-ui.min.js"></script>
+		src="/portal/resources/js/jquery/jquery-ui.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.14.1/jquery-ui.min.js"
 		integrity="sha512-MSOo1aY+3pXCOCdGAYoBZ6YGI0aragoQsg1mKKBHXCYPIWxamwOE7Drh+N5CPgGI5SA9IEKJiPjdfqWFWmZtRA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -16,7 +16,7 @@
 		href="http://fluig.castilho.com.br:1010/style-guide/css/fluig-style-guide.min.css" />
 	<script type="text/javascript" src="http://fluig.castilho.com.br:1010/style-guide/js/fluig-style-guide.min.js"
 		charset="utf-8"></script>
-	<script type="text/javascript" src="http://desenvolvimento.castilho.com.br:3232/webdesk/vcXMLRPC.js"></script>
+	<script type="text/javascript" src="/webdesk/vcXMLRPC.js"></script>
 
 
 	<!-- Docxtemplater -->
@@ -27,20 +27,20 @@
 
 	<!-- Mustache -->
 	<script type="text/javascript"
-		src="http://desenvolvimento.castilho.com.br:3232/portal/resources/js/mustache/mustache-min.js"></script>
+		src="/portal/resources/js/mustache/mustache-min.js"></script>
 
 	<!-- Castilho Dev Guide -->
 	<link rel="stylesheet"
-		href="http://desenvolvimento.castilho.com.br:3232/castilho_dev_guide/resources/css/castilho-cards.css">
+		href="/castilho_dev_guide/resources/css/castilho-cards.css">
 	<link rel="stylesheet"
-		href="http://desenvolvimento.castilho.com.br:3232/castilho_dev_guide/resources/css/castilho-tables.css">
+		href="/castilho_dev_guide/resources/css/castilho-tables.css">
 	<link rel="stylesheet"
-		href="http://desenvolvimento.castilho.com.br:3232/castilho_dev_guide/resources/css/castilho_dev_guide.css">
+		href="/castilho_dev_guide/resources/css/castilho_dev_guide.css">
 
 	<script
-		src="http://desenvolvimento.castilho.com.br:3232/castilho_dev_guide/resources/js/castilho-consultas-rm.js"></script>
+		src="/castilho_dev_guide/resources/js/castilho-consultas-rm.js"></script>
 	<script
-		src="http://desenvolvimento.castilho.com.br:3232/castilho_dev_guide/resources/js/castilho-utils.js"></script>
+		src="/castilho_dev_guide/resources/js/castilho-utils.js"></script>
 
 
 	<!-- selectize -->
